--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "buffer": "^6.0.3",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.419.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -28,11 +29,11 @@
     "sheetjs-style": "^0.15.8",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.1"
-
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
-    "vite": "^5.1.4"  }
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.1.4"
+  }
 }
